--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim-files/vim-pathogen"]
 	path = vim-files/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim-files/.vim/bundle/vim-sensible"]
+	path = vim-files/.vim/bundle/vim-sensible
+	url = git://github.com/tpope/vim-sensible.git
