--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim-files/.vim/bundle/vim-sensible"]
 	path = vim-files/.vim/bundle/vim-sensible
 	url = git://github.com/tpope/vim-sensible.git
+[submodule "vim-files/.vim/bundle/vim-fugitive"]
+	path = vim-files/.vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
