--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim-files/.vim/bundle/vim-fugitive"]
 	path = vim-files/.vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim-files/.vim/bundle/vim-eunuch"]
+	path = vim-files/.vim/bundle/vim-eunuch
+	url = https://github.com/tpope/vim-eunuch.git
