--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim-files/.vim/bundle/nerdtree"]
 	path = vim-files/.vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vim-files/.vim/bundle/tcomment_vim"]
+	path = vim-files/.vim/bundle/tcomment_vim
+	url = https://github.com/tomtom/tcomment_vim.git
