--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vim-files/.vim/bundle/tcomment_vim"]
 	path = vim-files/.vim/bundle/tcomment_vim
 	url = https://github.com/tomtom/tcomment_vim.git
+[submodule "vim-files/.vim/bundle/vim-characterize"]
+	path = vim-files/.vim/bundle/vim-characterize
+	url = https://github.com/tpope/vim-characterize.git
