--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim-files/.vim/bundle/vim-characterize"]
 	path = vim-files/.vim/bundle/vim-characterize
 	url = https://github.com/tpope/vim-characterize.git
+[submodule "vim-files/.vim/bundle/python-mode"]
+	path = vim-files/.vim/bundle/python-mode
+	url = https://github.com/klen/python-mode.git
