--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim-files/.vim/bundle/vim-lucius"]
 	path = vim-files/.vim/bundle/vim-lucius
 	url = https://github.com/jonathanfilip/vim-lucius.git
+[submodule "vim-files/.vim/bundle/taglist"]
+	path = vim-files/.vim/bundle/taglist
+	url = https://github.com/vim-scripts/taglist.vim.git
