oh-my-zsh as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim-files/.vim/bundle/taglist"]
 	path = vim-files/.vim/bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim.git
+[submodule "zsh-files/oh-my-zsh"]
+	path = zsh-files/oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
