--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "vim-files/.vim/bundle/vim-easymotion"]
 	path = vim-files/.vim/bundle/vim-easymotion
 	url = https://github.com/Lokaltog/vim-easymotion.git
+[submodule "vim-files/.vim/bundle/gundo"]
+	path = vim-files/.vim/bundle/gundo
+	url = https://github.com/sjl/gundo.vim.git
+[submodule "vim-files/.vim/bundle/ultisnips"]
+	path = vim-files/.vim/bundle/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
