--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim-files/.vim/bundle/ultisnips"]
 	path = vim-files/.vim/bundle/ultisnips
 	url = https://github.com/SirVer/ultisnips.git
+[submodule "vim-files/.vim/bundle/ctrlp"]
+	path = vim-files/.vim/bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
