--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim-files/.vim/bundle/ctrlp"]
 	path = vim-files/.vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "vim-files/.vim/bundle/vim-multiple-cursors"]
+	path = vim-files/.vim/bundle/vim-multiple-cursors
+	url = https://github.com/terryma/vim-multiple-cursors.git
