--- a/.gitmodules
+++ b/.gitmodules
@@ -60,3 +60,9 @@
 [submodule "vim-files/.vim/bundle/numbers"]
 	path = vim-files/.vim/bundle/numbers
 	url = https://github.com/myusuf3/numbers.vim.git
+[submodule "vim-files/.vim/bundle/vim-gitgutter"]
+	path = vim-files/.vim/bundle/vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim-files/.vim/bundle/rainbow_parentheses"]
+	path = vim-files/.vim/bundle/rainbow_parentheses
+	url = https://github.com/kien/rainbow_parentheses.vim.git
