Add powerline as a misc-file submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,6 @@
 [submodule "vim-files/.vim/bundle/rainbow_parentheses"]
 	path = vim-files/.vim/bundle/rainbow_parentheses
 	url = https://github.com/kien/rainbow_parentheses.vim.git
+[submodule "misc-files/powerline"]
+	path = misc-files/powerline
+	url = https://github.com/Lokaltog/powerline.git
