better color for tmux pane separator

--- a/tmux-files/.tmux.conf
+++ b/tmux-files/.tmux.conf
@@ -21,7 +21,7 @@ set-option -g status-left-bg default # match
 set-option -g status-left-fg colour74 # light blue
 
 setw -g window-status-current-format "#[fg=white,bold]#[bg=cyan][#I:#W]"
-set -g pane-active-border-fg blue
+set -g pane-active-border-fg green
 
 # xterm title
 set-option -g set-titles on
