--- a/tmux-files/tmux.conf
+++ b/tmux-files/tmux.conf
@@ -14,6 +14,8 @@ set-option -g base-index 1
 
 set-option -g default-terminal screen-256color
 
+set-option -g default-shell /bin/zsh
+
 # STATUS BAR
 set-option -g status-bg colour234 # light gray bg
 set-option -g status-fg colour255 # black text
