--- a/tmux-files/tmux.conf
+++ b/tmux-files/tmux.conf
@@ -30,10 +30,8 @@ set-option -g set-titles on
 set-option -g set-titles-string '[#S:#I #H] #W'
 
 # mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
 
 # big scrollback
 set -g history-limit 10240
