--- a/tmux-files/tmux.conf
+++ b/tmux-files/tmux.conf
@@ -33,6 +33,9 @@ set-option -g set-titles-string '[#S:#I #H] #W'
 set -g mouse-utf8 on
 set -g mouse on
 
+# clipboard
+set -g set-clipboard off
+
 # big scrollback
 set -g history-limit 10240
 
